// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComLink Matches snapshot with link 1`] = `
<a
  class="com-link --autor"
  href="https://lanacion.com.ar"
  target="_self"
>
  A link
</a>
`;

exports[`ComLink Matches snapshot with link and children string html 1`] = `
<a
  class="com-link --autor"
  href="https://lanacion.com.ar"
  target="_self"
>
  <em>
    Hola
  </em>
</a>
`;

exports[`ComLink Matches snapshot without link  and children string html 1`] = `
<span
  class="com-text --autor"
>
  <em>
    Hola
  </em>
</span>
`;

exports[`ComLink Matches snapshot without link 1`] = `
<span
  class="com-text --autor"
>
  A span
</span>
`;
